@@ -2438,6 +2438,8 @@ function cpg_determine_client()
         $os = 'Windows 2003 Server';
     } elseif (preg_match('#Windows NT 6\.0#i', $server_agent)) {
         $os = 'Windows Vista';
+    } elseif (preg_match('#Windows NT 6\.1#i', $server_agent)) {
+        $os = 'Windows 7';
     } elseif (preg_match('#Windows CE#i', $server_agent)) {
         $os = 'Windows CE';
     } elseif (preg_match('#Windows#i', $server_agent)) {
